--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "laravelcollective/html": "^5.1"
+        "laravelcollective/html": "^5.1",
+        "laravel/cashier": "~5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
